--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.10",
         "doctrine/doctrine-bundle": "^2.1",
@@ -12,12 +13,12 @@
         "doctrine/orm": "^2.7",
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*",
-      "ext-json": "*"
+        "symfony/yaml": "5.1.*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.21"
