--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=dec311cc8f06bff6147de820f666fdbe
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://lokuweb_admin:Asd!@3456@mn29.webd.pl:3306/lokuweb_pjstore?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
